# DoppelkopfFramework

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  player.csv  readMe.md
src/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  Round.h  Ruleset.cpp  Ruleset.h  card.cpp  card.h  main.cpp  main.py
src/core/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  Round.cpp  Ruleset.cpp  card.cpp  game.cpp  game.h  helper.cpp  helper.h  player.cpp  player.h  round.cpp  ruleset.cpp  ruleset.h
src/core/Rules/: DifferentTrumpRule.h  Rule.h  SecondH10BeatsFirst.h  TwoDiamondAAreHigh.h  WithCloverAsTrump.h  WithDiamondsAsTrump.h  WithHeartAsTrump.h  WithJacksAsTrump.h  WithQueensAsTrump.h  WithSpadesAsTrump.h  WithoutTrump.h
src/exampleBot/: CMakeLists.txt  ExampleBot.cpp  ExampleBot.h  exampleBot.cpp  exampleBot.h
src/pythonBot/: CMakeLists.txt  pythonBot.cpp  pythonBot.h  pythonBot.py
tests/: CMakeLists.txt  test.cpp
tests/core/: CMakeLists.txt  card_tests.cpp  game_tests.cpp  ruleset_tests.cpp
